Changed "to" to "from".

--- a/motion/templates/motion/base/assets/bits/header.html
+++ b/motion/templates/motion/base/assets/bits/header.html
@@ -9,7 +9,7 @@
 
         {% if entry.source %}
         <span class="source">
-            {% trans "posted to" %}
+            {% trans "posted from" %}
             {% with entry.source.original_link.href as original_href %}
                 {% if entry.source.provider %}
                     {% if entry.source.provider.icon %}
