--- a/motion/templates/motion/base/bits/flash.html
+++ b/motion/templates/motion/base/bits/flash.html
@@ -1,10 +1,10 @@
 {% for error in flash.errors %}
 <div class="flash error">
-    <a class="flash-close" href="#">x</a>{{ error }}
+    <a class="flash-close" href="#"> </a>{{ error }}
 </div>
 {% endfor %}
 {% for notice in flash.notices %}
 <div class="flash notice">
-    <a class="flash-close" href="#">x</a>{{ notice }}
+    <a class="flash-close" href="#"> </a>{{ notice }}
 </div>
 {% endfor %}
