--- a/motion/templates/motion/base/404.html
+++ b/motion/templates/motion/base/404.html
@@ -5,7 +5,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" id="sixapart-standard">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="generator" content="spacegiraffe 1.0" />
+    <meta name="generator" content="TypePad Motion" />
     <link rel="stylesheet" href="{{ settings.media_url }}themes/motion/style.css" type="text/css" />
     <link rel="start" href="{% url home %}" title="Home" />
     <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}themes/motion/favicon.ico" />
