--- a/motion/templates/motion/base/bits/html_head.html
+++ b/motion/templates/motion/base/bits/html_head.html
@@ -1,6 +1,6 @@
 <script type="text/javascript" language="javascript" src="{{ request.get_session_synchronization_url }}"></script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="generator" content="spacegiraffe 1.0" />
+<meta name="generator" content="TypePad Motion" />
 <link rel="stylesheet" href="{{ settings.media_url }}themes/{{ settings.theme }}/style.css" type="text/css" />
 <link rel="start" href="{% url home %}" title="Home" />
 <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}themes/{{ settings.theme }}/favicon.ico" />
