--- a/motion/templates/motion/base/assets/body/audio.html
+++ b/motion/templates/motion/base/assets/body/audio.html
@@ -1,21 +1,11 @@
 {% extends base|default:"motion/assets/body/base.html" %}
-{% load i18n %}
 
 {% block title %}{% endblock %}
 
 {% block media %}
-<div class="baconplayer preview audio">
-    <a href="#" class="play" title="{% trans "play" %}" onclick="BaconPlayer.playOrPause('{{ entry.link }}'); return false;"></a>
-    <a href="#" class="pause" title="{% trans "pause" %}" onclick="BaconPlayer.playOrPause('{{ entry.link }}'); return false;"></a>
-    <div class="progress">
-      <div class="title">{{ entry.title }}</div>
-      <span class="timing">
-        <span class="position">0:00</span> /
-        <span class="duration">0:00</span>
-      </span>
-      <div class="loading-progress">
-        <div class="inner-progress">&nbsp;</div>
-      </div>
-    </div>
-</div>
+{% with entry.title as title %}
+{% with entry.link as link %}
+    {% include "baconplayer.html" %}
+{% endwith %}
+{% endwith %}
 {% endblock %}
