Removed the close button from the flash notices. This might make the status messages look less like errors. To close the message, just click (like Twitter).

--- a/motion/templates/motion/base/bits/flash.html
+++ b/motion/templates/motion/base/bits/flash.html
@@ -1,10 +1,6 @@
 {% for error in flash.errors %}
-<div class="flash error">
-    <a class="flash-close" href="#"> </a>{{ error }}
-</div>
+<div class="flash error">{{ error }}</div>
 {% endfor %}
 {% for notice in flash.notices %}
-<div class="flash notice">
-    <a class="flash-close" href="#"> </a>{{ notice }}
-</div>
+<div class="flash notice">{{ notice }}</div>
 {% endfor %}
