--- a/motion/templates/motion/base/members.html
+++ b/motion/templates/motion/base/members.html
@@ -50,7 +50,9 @@ Template used for displaying the member directory for the group.
     {% endif %}
 
     {% if request.user.is_authenticated %}
+    {% ifnotequal rel "following" %} {# text doesn't make sense since you're already following them #}
     <p class="hint hint-following">{% trans "To follow a member, hover over their picture and click &lsquo;Follow&rsquo;." %}</p>
+    {% endifnotequal %}
     {% endif %}
 
     <ul class="member-list">
