--- a/motion/templates/motion/base/widgets/members.html
+++ b/motion/templates/motion/base/widgets/members.html
@@ -11,7 +11,7 @@
     <div class="widget-content members">
         <ul>
         {% for membership in memberships %}
-            {% with membership.source as member %}
+            {% with membership.target as member %}
             {% with 50 as photo_size %}
                 {% include "motion/bits/member_widget_item.html" %}
             {% endwith %}
