--- a/motion/templates/motion/base/assets/feed_title.html
+++ b/motion/templates/motion/base/assets/feed_title.html
@@ -1,4 +1,5 @@
 {% with obj as event %}{% with event.object as entry %}
+{% autoescape off %}
 {% spaceless %}{% if entry.title %}
     {% if entry.is_local %}
         {% if settings.use_titles %}
@@ -7,9 +8,10 @@
             {{ entry|truncatewords:20 }}
         {% endif %}
     {% else %}
-        {% autoescape off %}{{ entry.title|striptags }}{% endautoescape %}
+        {{ entry.title|striptags }}
     {% endif %}
 {% else %}
     {{ entry|truncatewords:20 }}
 {% endif %}{% endspaceless %}
+{% endautoescape %}
 {% endwith %}{% endwith %}
