Fixed urlizing and linebreaks for excerpt content (in html form).

--- a/motion/templates/motion/base/assets/bits/content.html
+++ b/motion/templates/motion/base/assets/bits/content.html
@@ -11,7 +11,7 @@
 {% else %}
     {% ifequal entry.text_format "html" %}
         {% withblock %}{% autoescape off %}{{ entry.content|striptags }}{% endautoescape %}{% as content %}
-        {{ content|truncatewords:settings.paragraph_wordcount }}
+        {{ content|urlize|linebreaks|truncatewords:settings.paragraph_wordcount }}
         {{ entry|morelink:settings.paragraph_wordcount }}
         {% endwithblock %}
     {% else %}
