Hide comment button after clicking once to prevent double clicking. I tried just disabling the button but that caused a weird Django error.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -1405,6 +1405,11 @@ button.button-delete {
     text-align: left;
     display: inline;
 }
+#comment-posting {
+    display: none;
+    font-size: 11px;
+    color: #444;
+}
 
 /* Members ---------------------------------------------------------------- */
 
