--- a/motion/templates/motion/base/permalink.html
+++ b/motion/templates/motion/base/permalink.html
@@ -68,6 +68,7 @@
                 <div>{{ form.body }}</div>
                 <div>
                     <button type="submit" id="comment-submit" name="comment" value="Submit">{% trans "Post" %}</button>
+                    <span id="comment-posting">Posting comment...</span>
                 </div>
             </form>
         {% else %}
