--- a/motion/templates/motion/base/assets/body/video.html
+++ b/motion/templates/motion/base/assets/body/video.html
@@ -1,5 +1,10 @@
 {% extends base|default:"motion/assets/body/base.html" %}
 {% load typepad_filters %}
+{% load i18n %}
+
+{% block header %}
+{% include "motion/assets/bits/header/video.html" %}
+{% endblock %}
 
 {% block media %}
 <div class="embed">
