Fixed block name.

--- a/motion/templates/motion/base/assets/bits/header/video.html
+++ b/motion/templates/motion/base/assets/bits/header/video.html
@@ -1,6 +1,6 @@
 {% extends "motion/assets/bits/header.html" %}
 {% load i18n %}
 
-{% block local_phrase %}
+{% block source_phrase %}
 {% trans "shared a video from" %}
 {% endblock %}
