--- a/motion/templates/motion/base/assets/bits/content.html
+++ b/motion/templates/motion/base/assets/bits/content.html
@@ -4,7 +4,7 @@
 {% load twittilize %}
 
 {% ifequal view "permalink" %}
-    {% ifequal entry.source.provider.uri "http://twitter.com/" %}
+    {% ifequal entry.source.provider.uri "http://www.twitter.com/" %}
         {{ entry.content|twittilize }}
     {% else %}
         {% ifequal entry.text_format "html" %}
@@ -14,7 +14,7 @@
         {% endifequal %}
     {% endifequal %}
 {% else %}
-    {% ifequal entry.source.provider.uri "http://twitter.com/" %}
+    {% ifequal entry.source.provider.uri "http://www.twitter.com/" %}
         {{ entry.content|twittilize }}
     {% else %}
         {% ifequal entry.text_format "html" %}
