--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -725,6 +725,9 @@ p {
     z-index: 10;
     padding: 5px;
 }
+.controls form {
+    display: inline;
+}
 button.button-more {
     font-size: 18px;
 }
@@ -737,6 +740,16 @@ button.button-more {
 }
 button.button-delete {
     background-image: url(images/icons/cross.png);
+    background-repeat: no-repeat;
+    width: 16px;
+    height: 16px;
+    text-indent: -9999px;
+    padding: 0;
+    background-color: transparent;
+}
+/* for moderation */
+button.button-flag {
+    background-image: url(images/icons/flag_red.png);
     background-repeat: no-repeat;
     width: 16px;
     height: 16px;
