--- a/motion/templates/motion/base/bits/compose_form.html
+++ b/motion/templates/motion/base/bits/compose_form.html
@@ -2,7 +2,7 @@
 <div id="compose">
     <div id="compose-inner">
         <div id="compose-content">
-            <form id="form-compose" method="post" action="" enctype="multipart/form-data">
+            <form id="form-compose" method="post" action="{% url motion_post_url %}" enctype="multipart/form-data">
                 <input type="hidden" id="compose-class" name="post_type" value="{{ form.post_type.data|default:"post" }}" />
                 <input type="hidden" name="redirect_to" value="{{ upload_complete_endpoint }}" />
                 <input type="hidden" id="compose-asset" name="asset" value="" />
