Style 'suppressed' comments (not really taken out of the stream since that would bork ajax pagination).

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -981,6 +981,9 @@ button.button-flag.flagged {
 .comment .asset-content {
     background: url(images/comment-bg.gif) no-repeat 0 6px;
 }
+.comment.suppress {
+    color: #CCC;
+}
 .comment.action-asset .asset-content {
     background: none;
 }
