Updates for crossposting. Cleanup of views to support typepad_request calls made for POSTs. Condition moderation template bits using ifinstalled tag.

--- a/motion/templates/motion/base/assets/bits/delete.html
+++ b/motion/templates/motion/base/assets/bits/delete.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load ifinstalled %}
+
 {% if user.is_authenticated %}
 <div class="controls">
     {% block controls %}
@@ -20,9 +22,11 @@
     </form>
     {% endif %}
     {% endif %}
-    {% if settings.use_moderation %}
+
+    {% ifinstalled moderation %}
     {% include "moderation/bits/moderate.html" %}
-    {% endif %}
+    {% endifinstalled %}
+
     {% endblock %}
 </div>
 {% endif %}
