Make this a little darker.

--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -531,7 +531,7 @@ p {
 #entry-fields .field {
     margin-bottom: 10px;
     font-size: 13px;
-    color: #aaa;
+    color: #555;
 }
 #entry-fields-optional {
     display: none;
