--- a/motion/templates/motion/base/assets/body/audio.html
+++ b/motion/templates/motion/base/assets/body/audio.html
@@ -5,7 +5,9 @@
 {% block media %}
 {% with entry.title as title %}
 {% with entry.link as link %}
+{% with entry.url_id as id %}
     {% include "baconplayer.html" %}
+{% endwith %}
 {% endwith %}
 {% endwith %}
 {% endblock %}
