Switch follower display to use source instead of target.

--- a/motion/templates/motion/base/members.html
+++ b/motion/templates/motion/base/members.html
@@ -58,9 +58,15 @@ Template used for displaying the member directory for the group.
     <ul class="member-list">
         {% for relationship in page_obj.object_list %}
             <!-- {% cycle "1" "2" "3" as column %} -->
+            {% ifequal rel "followers" %}
+            {% with relationship.source as member %}
+                {% include "motion/bits/member_page_item.html" %}
+            {% endwith %}
+            {% else %}
             {% with relationship.target as member %}
                 {% include "motion/bits/member_page_item.html" %}
             {% endwith %}
+            {% endif %}
         {% endfor %}
     </ul>
 
