--- a/motion/templates/motion/base/widgets/followers.html
+++ b/motion/templates/motion/base/widgets/followers.html
@@ -22,7 +22,7 @@ Template used for displaying a list of the users followers.
         </div>
         <ul>
             {% for rel in followers %}
-            {% with rel.target as member %}
+            {% with rel.source as member %}
             {% with 32 as photo_size %}
             {% include "motion/bits/member_widget_item.html" %}
             {% endwith %}
