--- a/motion/templates/motion/base/members.html
+++ b/motion/templates/motion/base/members.html
@@ -66,7 +66,7 @@ Template used for displaying the member directory for the group.
             {% with relationship.target as member %}
                 {% include "motion/bits/member_page_item.html" %}
             {% endwith %}
-            {% endif %}
+            {% endifequal %}
         {% endfor %}
     </ul>
 
