Updated theme to vanilla.

--- a/motion/templates/motion/base/base.html
+++ b/motion/templates/motion/base/base.html
@@ -18,8 +18,8 @@
             {% include "motion/banners/header.html" %}
             {% include "motion/bits/flash.html" %}
 
-            <div id="content" class="design-content-border design-content-font design-content-color">
-                <div id="content-inner">
+            <div id="pagebody" class="design-content-border design-content-font design-content-color">
+                <div id="pagebody-inner">
 
                     {% block content_head %}
                     {% if settings.allow_posting %}
@@ -69,8 +69,8 @@
                     </div><!-- end #beta -->
 
 
-                </div><!-- end #content-inner -->
-            </div><!-- end #content -->
+                </div><!-- end #pagebody-inner -->
+            </div><!-- end #pagebody -->
 
 
             {% include "motion/banners/footer.html" %}
