--- a/motion/templates/motion/base/following.html
+++ b/motion/templates/motion/base/following.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block page_id %}user-following{% endblock %}
-{% block page_layout %}layout-wm{% endblock %}
+{% block page_layout %}layout-two-column-right{% endblock %}
 
 {% block html_head %}
 {{ block.super }}
