--- a/motion/templates/motion/base/permalink.html
+++ b/motion/templates/motion/base/permalink.html
@@ -4,7 +4,7 @@
 {% load ifinstalled %}
 
 {% block head_title %}{{ block.super }}{% if entry.title %}: {{ entry.title }}{% else %}{% if entry.content %}: {{ entry.content|striptags|truncatechars:40 }}{% endif %}{% endif %}{% endblock %}
-{% block page_layout %}layout-wm{% endblock %}
+{% block page_layout %}layout-two-column-right{% endblock %}
 
 {% block html_head %}
 {{ block.super }}
