--- a/motion/templates/motion/base/500.html
+++ b/motion/templates/motion/base/500.html
@@ -1,22 +1,14 @@
+{% extends "motion/base.html" %}
 {% load i18n %}
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 
-<html xmlns="http://www.w3.org/1999/xhtml" id="sixapart-standard">
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="generator" content="TypePad Motion" />
-    <link rel="stylesheet" href="{{ settings.media_url }}themes/motion/style.css" type="text/css" />
-    <link rel="start" href="/" title="Home" />
-    <link rel="shortcut icon" type="image/x-icon" href="{{ settings.media_url }}themes/motion/favicon.ico" />
-    <title>{{ title }}</title>
-</head>
+{% block head_title %}{{ block.super }} - {% trans "500 Internal Server Error" %}{% endblock %}
 
-<body id="motion" class="error">
-    <p>{% trans "Whoops! Can you try that again?" %}
-        <a href="/">{% trans "Return to the home page." %}</a></p>
-    <p><img src="{{ settings.media_url }}images/fail.png"
-        height="620" width="502" alt="{% trans "Spacegiraffe is having a massage" %}"
-        title="{% trans "Spacegiraffe is having a massage" %}" /></p>
-</body>
-</html>
+{% block content_body %}
+
+<h1>{% trans "500 Internal Server Error" %}</h1>
+
+<p class="error-page">{% trans "An internal server has occurred. Please contact the server administrator to let us know that an error has occurred. Thank you!" %}</p>
+<p class="error-page"><strong><a href="{% url home %}">{% trans "Head home!" %}</a></strong></p>
+<div id="error-big-space"></div>
+
+{% endblock %}
