--- a/motion/static/theme/style.css
+++ b/motion/static/theme/style.css
@@ -202,13 +202,12 @@ p {
 }
 #banner #banner-header {
     margin: 0;
-    padding: 15px 0;
+    padding: 25px 0;
     font-size: 5em;
 }
 #banner #banner-header a {
-    height: 50px;
-    width: 400px;
     display: block;
+    font-weight: lighter;
 }
 .widget-sign-in .separator {
     padding-right: 5px;
@@ -268,11 +267,11 @@ p {
     cursor: hand;
 }
 .flash.notice {
-    background: #fff9df url(images/cross.png) no-repeat 925px;
+    background: #EFEFEF url(images/cross.png) no-repeat 925px;
 
 }
 .flash.error {
-    background: #ffdfdf url(images/cross.png) no-repeat 925px;
+    background: #EFEFEF url(images/cross.png) no-repeat 925px;
 }
 
 /* Navigation (tabs) ------------------------------------------------------------- */
@@ -819,10 +818,10 @@ button.button-flag.flagged {
 .action {
     position: relative;
     list-style-type: none;
-    margin-bottom: 65px;
-    padding-bottom:15px;
-    margin-top:15px;
-    margin-left:8px;
+    margin-bottom: 40px;
+    padding-bottom: 0px;
+    margin-top: 15px;
+    margin-left: 8px;
 	background: url(images/asset-action-bg.gif) repeat-y left top;
 }
 .action {
@@ -843,7 +842,7 @@ button.button-flag.flagged {
 }
 .asset .asset-body, 
 .action .asset-body { 
-    margin-bottom: 30px;
+    margin-bottom: 18px;
 }
 
 .asset-banner {
@@ -855,7 +854,7 @@ button.button-flag.flagged {
 .asset-meta {
     font-size: 11px;
     color: #aaa;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     text-align: right;
     float: left;
 }
